k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-album-app
  labels:
    app: photo-album
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: photo-album
  template:
    metadata:
      labels:
        app: photo-album
    spec:
      containers:
      - name: photo-album
        image: ghcr.io/kadam12g/photo-album-app/photo-album-app:09f6c2c7389771aef73cbbc7ce54b7782a43dea4
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 12
        volumeMounts:
        - name: uploads
          mountPath: /app/app/static/uploads
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
          requests:
            cpu: "200m"
            memory: "200Mi"
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads-pvc
