k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-album-app
spec:
  selector:
    app: photo-album
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
